Committed with the unopenable images

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,7 +2,7 @@
 <p>{{name}}</p>
 <p>{{title}}</p> -->
 
-<h3 class='ui red huge header'>I am in the appComponent</h3>
+<!-- <h3 class='ui red huge header'>I am in the appComponent</h3>
 <button class="ui primary button">Test</button>
 <hr>
 <app-servers></app-servers>
@@ -13,7 +13,7 @@
     <div class="header">
         Profile Picture
     </div>
-</div>
+</div> -->
 
 <div class="ui left demo vertical inverted sidebar labeled icon menu">
     <a href="" class="item"><i class="home icon"></i>Home</a>
@@ -22,6 +22,10 @@
 </div>
 
 <button class="ui basic primary button" (click)="onToggle()">Toggle Me</button>
+
+<app-menu></app-menu>
+<app-feed></app-feed>
+
 <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
