--- a/app/menu/menu.component.html
+++ b/app/menu/menu.component.html
@@ -1,3 +1,20 @@
-<p>
+<!-- <p>
   menu works!
-</p>
+</p> -->
+
+<div class="ui secondary pointing menu">
+  <a class="active item">
+    Home
+  </a>
+  <a class="item">
+    Messages
+  </a>
+  <a class="item">
+    Friends
+  </a>
+  <div class="right menu">
+    <a class="ui item">
+      Logout
+    </a>
+  </div>
+</div>
