Completion of the deep linking in the router

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -15,16 +15,9 @@
     </div>
 </div> -->
 
-<div class="ui left demo vertical inverted sidebar labeled icon menu">
-    <a href="" class="item"><i class="home icon"></i>Home</a>
-    <a href="" class="item"><i class="block layout icon"></i>Topics</a>
-    <a href="" class="item"><i class="smile icon"></i>Friends</a>
-</div>
-
-<button class="ui basic primary button" (click)="onToggle()">Toggle Me</button>
-
 <app-menu></app-menu>
-<app-feed></app-feed>
+
+<router-outlet></router-outlet>
 
 <!-- <!DOCTYPE html>
 <html lang="en">
