--- a/app/menu/menu.component.html
+++ b/app/menu/menu.component.html
@@ -2,19 +2,34 @@
   menu works!
 </p> -->
 
-<div class="ui secondary pointing menu">
-  <a class="active item">
-    Home
+<div class="ui pointing menu">
+  <a class="item">
+    <a (click)="onToggle()"><i class="sidebar icon"></i></a>
   </a>
   <a class="item">
-    Messages
-  </a>
-  <a class="item">
-    Friends
+    testing
   </a>
   <div class="right menu">
-    <a class="ui item">
-      Logout
-    </a>
+    <div class="item">
+      <div class="ui transparent icon input">
+        <input type="text" placeholder="Search...">
+        <i class="search link icon"></i>
+      </div>
+    </div>
   </div>
+</div>
+
+<div class="ui left demo vertical inverted sidebar labeled icon menu">
+  <a class="item" routerLink="/feed" routerLinkActive="active">
+    <i class="home icon"></i>Home
+  </a>
+  <a class="item" routerLink="/messages" routerLinkActive="active">
+    <i class="mail outline icon"></i>Messages
+  </a>
+  <a class="item" routerLink="/friends" routerLinkActive="active">
+    <i class="users icon"></i>Friends
+  </a>
+  <a class="item">
+     <i class="sign out icon"></i>Logout
+  </a>
 </div>
