--- a/app/feed/feed.component.html
+++ b/app/feed/feed.component.html
@@ -16,7 +16,7 @@
     <div class="content">
       <a class="author">{{t.author}}</a>
       <div class="metadata">
-        <span class="date">{{t.date | date: 'hh:mm:ss dd/mm/yy'}}</span>
+        <span class="date">{{t.date | date: 'yyyy-MMM-dd HH:mm:ss'}}</span>
       </div>
       <div class="text">
         {{t.body}}
