Grid and rounting completed

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -26,7 +26,7 @@
 </div>
 
 <app-command-navigator></app-command-navigator>
-
+<router-outlet></router-outlet>
 
 <!-- <!DOCTYPE html>
 <html lang="en">
