--- a/app/command-navigator/command-navigator.component.html
+++ b/app/command-navigator/command-navigator.component.html
@@ -1,45 +1,26 @@
 <div class="ui left demo inverted vertical sidebar labeled icon menu">
-  <a class="item">
-    <i class="red home icon"></i>
+  <a class="item" routerLink="/gledger" routerLinkActive="active">
+    <i class="red archive icon"></i>
     <span style="color:red">G. Ledger</span>
   </a>
-  <a class="item">
+  <a class="item" routerLink="/customer" routerLinkActive="active">
     <i class="orange user icon"></i>
     <span style="color:orange">Customer</span>
   </a>
-  <a class="item">
+  <a class="item" routerLink="/supplier" routerLinkActive="active">
     <i class="yellow user outline icon"></i>
     <span style="color:yellow">Supplier</span>
   </a>
-  <a class="item">
+  <a class="item" routerLink="/sales" routerLinkActive="active">
     <i class="green cube icon"></i>
     <span style="color:aquamarine">Sales</span>
   </a>
-  <a class="item">
+  <a class="item" routerLink="/purchase" routerLinkActive="active">
     <i class="blue cube icon"></i>
     <span style="color:skyblue">Purchase</span>
   </a>
-  <a class="item">
+  <a class="item" routerLink="/stock" routerLinkActive="active">
     <i class="violet cubes icon"></i>
     <span style="color:violet">Stock</span>
   </a>
-</div>
-
-<div class="ui massive top attached tabular menu" (click)="onChangeTab()">
-  <div class="right menu">
-    <a class="active item" data-tab="document">
-      <span>Documents</span>
-    </a>
-    <a class="item" data-tab="report">
-      <span>Reports</span>
-    </a>
-  </div>
-</div>
-
-<div class="ui massive bottom attached active tab segment" data-tab="document">
-  Document success
-</div>
-
-<div class="ui massive attached tab segment" data-tab="report">
-  Report success
 </div>
